# my-python-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
mpy/: __init__.py  cli.py
mypy/: __init__.py  __main__.py  cli.py
src/mpy/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_main.py  test_mpy.py  test_mypy.py
